--- a/membres.html
+++ b/membres.html
@@ -8,6 +8,7 @@
 
 		<title>L'&eacute;quipe - LIF</title>
 <meta charset="utf-8">
+<meta name="DC.date" content="1740167252">
 <meta name="description" content="FOO">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="robots" content="index,follow">
