--- a/recherche.html
+++ b/recherche.html
@@ -8,6 +8,7 @@
 
 		<title>La recherche au LIF - LIF</title>
 <meta charset="utf-8">
+<meta name="DC.date" content="1740227685">
 <meta name="description" content="FOO">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="robots" content="index,follow">
